# fisrt-it-company-backend

./: .gitignore  Readme.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/api/: filters.py  models.py  serializers.py  views.py
backend/api/fixtures/: initial_data.json
backend/api/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
