[tool.poetry]
name = "fisrt-it-company-backend"
version = "0.1.0"
description = ""
authors = ["Sartc00l <sukindima025@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
django = ">=6.0.6,<7.0.0"
djangorestframework = ">=3.17.1,<4.0.0"
django-filter = ">=25.2,<26.0"
django-cors-headers = ">=4.9.0,<5.0.0"
psycopg2-binary = ">=2.9.12,<3.0.0"
gunicorn = ">=26.0.0,<27.0.0"
python-dotenv = ">=1.2.2,<2.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.15.20,<0.16.0"
pytest = ">=9.1.1,<10.0.0"
pytest-django = ">=4.12.0,<5.0.0"
django-debug-toolbar = ">=7.0.0,<8.0.0"
factory-boy = ">=3.3.3,<4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"